--- a/client/app/home/home.jade
+++ b/client/app/home/home.jade
@@ -1,22 +1,13 @@
-div( ng-controller="HomeCtrl" )
-	h1 Welcome to my directory!
+div( id="home" ng-controller="HomeCtrl" )
+	img( src="img/roma.jpg" )
+	h4.text-center Web Developer | 25 | Poland, Krakow
 
-	a.btn.btn-lg.btn-primary( href="/directory" ) View Directory
-
-	a.fa.fa-5x(
-		ng-repeat="contact in contacts",
-		ng-href="{{contact.url}}",
-		title="{{contact.title}}",
-		class="{{contact.icon}}",
-		target="_blank"
-	)
-
-	//- a.fa.fa-phone.fa-5x( href="tel:+48536585744", title="Phone", target="_blank" )
-	//- a.fa.fa-skype.fa-5x( href="skype:romaleev", title="Skype", target="_blank" )
-	//- a.fa.fa-envelope-o.fa-5x( href="mailto:aromaleev@gmail.com", title="Email" )
-	//- a.fa.fa-vk.fa-5x( href="http://vk.com/romaleev", title="Vkontakte", target="_blank" )
-	//- a.fa.fa-facebook.fa-5x( href="fb.com/romaleev", title="Facebook", target="_blank" )
-	//- a.fa.fa-instagram.fa-5x( href="instagram.com/romaleev", title="Instagram", target="_blank" )
-	//- a.fa.fa-linkedin.fa-5x( href="linkedin/in/romaleev", title="LinkedIn", target="_blank" )
-	//- a.fa.fa-stack-overflow.fa-5x( href="http://stackoverflow.com/users/991818/roman-malieiev", title="Stack Overflow", target="_blank" )
-	//- a.fa.fa-github.fa-5x( href="#", title="GitHub", target="_blank" )
+	//- a.btn.btn-lg.btn-primary( href="/directory" ) View Directory
+	div.row.text-center
+		div.contact.col-xs-4.col-sm-3.col-md-2.col-lg-1( ng-repeat="contact in contacts" )
+			a.fa.fa-5x(
+				ng-href="{{contact.url}}",
+				title="{{contact.title}}",
+				class="{{contact.icon}}",
+				target="_blank"
+			)
