--- a/client/index.jade
+++ b/client/index.jade
@@ -2,6 +2,11 @@ doctype html
 html( ng-app='romaleev' )
 	head
 		meta( charset='utf8' )
+		meta( name="viewport" content="width=device-width, initial-scale=1.0" )
+		<meta name="author" content="Roman Malieiev">
+		<meta name="keywords" content="romaleev, Roman Malieiev, web developer" />
+		<meta name="description" content="Personal site" />
+		//- <meta name="document-state" content="Dynamic" />
 		title Roman Malieiev | 25 | Web developer
 		base(href="/")
 
@@ -20,7 +25,7 @@ html( ng-app='romaleev' )
 			div.container
 				div.navbar-header
 					a.navbar-brand( href="/" )
-						img( class="logo glyphicon", alt="Roma", src="img/logo.jpg")
+						img.logo( alt="Roman Malieiev", src="img/logo.jpg" )
 						| Roman Malieiev
 
 				//- div.navbar-collapse.collapse
