--- a/client/app/app.less
+++ b/client/app/app.less
@@ -6,16 +6,15 @@
 	src: local('Open Sans Semibold'), local('OpenSans-Semibold'), url(/fonts/OpenSansLatin600.woff2) format('woff2');
 	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
-body{
-}
 body {
 	font-family: 'Open Sans';
 }
 .logo{
-	width:32px;
-	height:32px;
+	float: left;
+	width: 32px;
+	height: 32px;
 	margin-right: 0.7em;
-	margin-top: -7px;
+	margin-top: -6px;
 }
 .content{
 	margin: 0 auto;
