--- a/client/index.jade
+++ b/client/index.jade
@@ -11,11 +11,14 @@ html( ng-app='romaleev' )
 		title( ng-bind="tab_title" )
 		base(href="/")
 
-		// build:css styles.css
+		// build:css styles/vendor.css
 		// bower:css
 		link(rel='stylesheet', href='bower_components/bootstrap/dist/css/bootstrap.css')
 		link(rel='stylesheet', href='bower_components/fontawesome/css/font-awesome.css')
 		// endbower
+		// endbuild
+
+		// build:css styles/styles.css
 		link( rel="stylesheet", href="app/app.css" )
 		link( rel="stylesheet", href="app/details/details.css" )
 		link( rel="stylesheet", href="directives/directory/directory.css" )
@@ -45,7 +48,7 @@ html( ng-app='romaleev' )
 		div.text-center
 			p © Roman Malieiev 2012-2015
 
-		// build:js vendor.js
+		// build:js scripts/vendor.js
 		// bower:js
 		script(src='bower_components/angular/angular.js')
 		script(src='bower_components/angular-route/angular-route.js')
@@ -53,7 +56,7 @@ html( ng-app='romaleev' )
 		// endbower
 		// endbuild
 
-		// build:js scripts.js
+		// build:js scripts/scripts.js
 		script( src="app/app.js")
 		script( src="app/home/home.controller.js")
 		script( src="app/directory/directory.controller.js")
