--- a/client/app/app.less
+++ b/client/app/app.less
@@ -7,15 +7,16 @@
 }
 body {
 	font-family: 'Open Sans';
+	padding-top: 4em;
 }
 .logo{
 	float: left;
 	width: 32px;
 	height: 32px;
 	margin-right: 0.7em;
-	margin-top: -6px;
+	margin-top: -0.35em;
 }
-.content{
+.container-fluid{
 	margin: 0 auto;
 	max-width: 55em;
 }
