--- a/client/index.jade
+++ b/client/index.jade
@@ -12,17 +12,19 @@ html( ng-app='romaleev' )
 		base(href="/")
 
 		// build:css styles/vendor.css
-		// bower:css
-		link(rel='stylesheet', href='bower_components/bootstrap/dist/css/bootstrap.css')
-		link(rel='stylesheet', href='bower_components/fontawesome/css/font-awesome.css')
-		// endbower
-		link(rel='stylesheet', href='bower_components/bootstrap/dist/css/bootstrap-theme.css')
+		//- vendorCSS:css
+		link(rel="stylesheet", href="bower_components/bootstrap/dist/css/bootstrap.min.css")
+		link(rel="stylesheet", href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css")
+		link(rel="stylesheet", href="bower_components/fontawesome/css/font-awesome.min.css")
+		//- endinject
 		// endbuild
 
 		// build:css styles/styles.css
-		link( rel="stylesheet", href="app/app.css" )
-		link( rel="stylesheet", href="app/details/details.css" )
-		link( rel="stylesheet", href="directives/directory/directory.css" )
+		//- userCSS:less
+		link(rel="stylesheet", href="app/app.css")
+		link(rel="stylesheet", href="app/details/details.css")
+		link(rel="stylesheet", href="directives/directory/directory.css")
+		//- endinject
 		// endbuild
 
 	body
@@ -54,24 +56,26 @@ html( ng-app='romaleev' )
 		hr
 
 		div.text-center
-			p © Roman Malieiev 2012-2015
+			p © Roman Malieiev 2012-201567
 
 		// build:js scripts/vendor.js
-		// bower:js
-		script(src='bower_components/jquery/dist/jquery.js')
-		script(src='bower_components/angular/angular.js')
-		script(src='bower_components/angular-route/angular-route.js')
-		script(src='bower_components/angular-sanitize/angular-sanitize.js')
-		script(src='bower_components/bootstrap/dist/js/bootstrap.js')
-		// endbower
+		//- vendorJS:js
+		script(src="bower_components/jquery/dist/jquery.min.js")
+		script(src="bower_components/angular/angular.min.js")
+		script(src="bower_components/angular-route/angular-route.min.js")
+		script(src="bower_components/angular-sanitize/angular-sanitize.min.js")
+		script(src="bower_components/bootstrap/dist/js/bootstrap.min.js")
+		//- endinject
 		// endbuild
 
 		// build:js scripts/scripts.js
-		script( src="app/app.js")
-		script( src="app/home/home.controller.js")
-		script( src="app/directory/directory.controller.js")
-		script( src="app/details/details.controller.js")
-		script( src="directives/directory/directory.directive.js")
-		script( src="services/directories.service.js")
-		script( src="services/data.service.js")
+		//- userJS:js
+		script(src="app/app.js")
+		script(src="services/data.service.js")
+		script(src="services/directories.service.js")
+		script(src="app/details/details.controller.js")
+		script(src="app/directory/directory.controller.js")
+		script(src="app/home/home.controller.js")
+		script(src="directives/directory/directory.directive.js")
+		//- endinject
 		// endbuild
