--- a/client/app/home/home.jade
+++ b/client/app/home/home.jade
@@ -1,4 +1,4 @@
-div( id="home" ng-controller="HomeCtrl" )
+div( id="home" )
 	img( src="img/roma.jpg" )
 	h4.text-center Web Developer | 25 | Poland, Krakow
 
