--- a/client/index.jade
+++ b/client/index.jade
@@ -5,10 +5,10 @@ html( ng-app='romaleev' )
 		meta( name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no" )
 		meta( name="author" content="Roman Malieiev" )
 		meta( name="keywords" content="romaleev, Roman Malieiev, web developer" )
-		meta( name="description" content="Home Page" )
+		meta( name="description" content="{{tab_titl}}" )
 		meta( name="fragment" content="!" )
 
-		title( ng-bind="tab_title" )
+		title( ng-bind="'Roman Malieiev - ' + $root.title" )
 		base(href="/")
 
 		// build:css styles/vendor.css
