--- a/client/app/directory/directory.jade
+++ b/client/app/directory/directory.jade
@@ -1,8 +1,9 @@
-h1 Directory
+div( id='directory' )
+	h1 Directory
 
-div( ng-repeat="directory in directories" )
-	directory( 
-		fullName='{{directory.name.last}}, {{directory.name.first}}'
-		about='{{directory.about}}'
-		thumbSrc='{{directory.picture.thumbnail}}'
-	)
+	div( ng-repeat="directory in directories" )
+		directory(
+			fullName='{{directory.name.last}}, {{directory.name.first}}'
+			about='{{directory.about}}'
+			thumbSrc='{{directory.picture.thumbnail}}'
+		)
