--- a/client/index.jade
+++ b/client/index.jade
@@ -5,7 +5,7 @@ html( ng-app='romaleev' )
 		meta( name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no" )
 		meta( name="author" content="Roman Malieiev" )
 		meta( name="keywords" content="romaleev, Roman Malieiev, web developer" )
-		meta( name="description" content="{{tab_titl}}" )
+		meta( name="description" content="Roman Malieiev | 25 | web developer" )
 		meta( name="fragment" content="!" )
 
 		title( ng-bind="'Roman Malieiev - ' + $root.title" )
