--- a/client/app/home/home.jade
+++ b/client/app/home/home.jade
@@ -1,8 +1,7 @@
 div( id="home" )
 	img( src="img/roma.jpg" )
-	h4.text-center Web Developer | 25 | Poland, Krakow
+	h4.text-center Web Developer | Krakow, Poland
 
-	//- a.btn.btn-lg.btn-primary( href="/directory" ) View Directory
 	div.row.text-center
 		div.contact.col-xs-4.col-sm-3.col-md-2.col-lg-1( ng-repeat="contact in contacts" )
 			a.fa.fa-5x(
