--- a/client/directives/directory/directory.jade
+++ b/client/directives/directory/directory.jade
@@ -2,7 +2,8 @@ div.directory
 	div.pull-left
 		img.img-circle.img-thumbnail( ng-src="{{thumbsrc}}" alt="{{fullname}}" )
 	div.no-overflow
-		p.title( ng-bind='fullname' )
+		span.text-primary.pull-right( ng-bind='price' )
+		p.title.bold( ng-bind='fullname' )
 		p( ng-bind='about' )
 		p
 			a.btn.btn-primary( ng-href="/directory/{{encodeURI(fullname)}}" ) View Profile
