--- a/client/directives/directory/directory.less
+++ b/client/directives/directory/directory.less
@@ -3,11 +3,10 @@
 	img{
 		margin-right: 0.5em;
 	}
-	.title{
-		font-weight: bold;
-		margin-bottom:0;
+	p.title{
+		margin-bottom: 2px;
 	}
-	.no-overflow{
+	div.no-overflow{
 		overflow: hidden;
 	}
 }
