--- a/client/app/details/details.jade
+++ b/client/app/details/details.jade
@@ -6,5 +6,6 @@ div( id='details' )
 			td( ng-bind='key' )
 			td( ng-bind-html='person[key]' )
 
-	p.text-right
-		a.btn.btn-primary( href="/directory" ) View Directory
+	button.btn.btn-warning Hire
+
+	a.pull-right.btn.btn-primary( href="/directory" ) View Directory
