--- a/client/app/details/details.less
+++ b/client/app/details/details.less
@@ -1,19 +1,15 @@
-table.details{
-	td{
-		padding-bottom: 2px;
-		&:first-child{
-			min-width: 10em;
-			text-align: right;
-			padding-right: 1em;
-			font-weight: bold;
-			vertical-align: top;
+div#details{
+	table.details{
+		td{
+			padding-bottom: 2px;
+			&:first-child{
+				min-width: 10em;
+				text-align: right;
+				padding-right: 1em;
+				vertical-align: top;
+			}
 		}
-	}
-	span{
-		&.about{
-			font-size: 120%;
-		}
-		&.alert{
+		span.alert{
 			padding: 2px;
 		}
 	}
