--- a/client/app/app.less
+++ b/client/app/app.less
@@ -7,7 +7,10 @@
 }
 .bold{
 	font-size: 120%;
-	line-height: 1em;
+	line-height: 1.2em;
+}
+.fit-width{
+	width: 100%;
 }
 body{
 	font-family: 'Open Sans';
