--- a/client/app/directory/directory.less
+++ b/client/app/directory/directory.less
@@ -36,17 +36,19 @@ div#directory{
 		}
 		.btn{
 			min-width: 10em;
+			margin-right: 4px;
 		}
 	}
-	div.grid[class^='col-']{
+	.grid{
 		float: none;
 		display: inline-block;
 		vertical-align: top;
-	}
-	.grid{
 		margin-bottom: 1em;
 		.btn{
 			width: 49%;
+			&:first-child{
+				margin-right:2%;
+			}
 		}
 	}
 	.btn-group{
