--- a/client/app/directory/directory.less
+++ b/client/app/directory/directory.less
@@ -35,8 +35,8 @@ div#directory{
 			overflow: hidden;
 		}
 		.btn{
-			min-width: 10em;
-			margin-right: 4px;
+			width: 50%;
+			max-width: 10em;
 		}
 	}
 	.grid{
@@ -45,10 +45,8 @@ div#directory{
 		vertical-align: top;
 		margin-bottom: 1em;
 		.btn{
-			width: 49%;
-			&:first-child{
-				margin-right:2%;
-			}
+			width: 50%;
+			min-width: 8em;
 		}
 	}
 	.btn-group{
