--- a/client/app/details/details.less
+++ b/client/app/details/details.less
@@ -1,9 +1,11 @@
 div#details{
+	h2{
+		margin-top: 5px;
+	}
 	table.details{
 		td{
 			padding-bottom: 2px;
 			&:first-child{
-				min-width: 10em;
 				text-align: right;
 				padding-right: 1em;
 				vertical-align: top;
