--- a/client/app/directory/directory.less
+++ b/client/app/directory/directory.less
@@ -3,19 +3,25 @@ div#directory{
 		margin-right: 0.5em;
 	}
 	.alert{
-		margin: 0.15em 0 0 0;
-		padding: 0.3em;
+		padding: 0.5em;
 	}
-	.row{
-		&.title{
-			margin-top: 5px;
-			h2{
-				margin-top: 0;
-			}
+	.title{
+		margin-top: 0.5em;
+		h2{
+			margin-top: 0;
 		}
 	}
-	.list{
+	.btn-toolbar{
 		margin-bottom: 0.5em;
+	}
+	.btn{
+		margin-bottom: 0.5em;
+	}
+	p.about{
+		margin-bottom: 0.25em;
+	}
+	.list{
+		margin-bottom: 1em;
 		div.no-overflow{
 			overflow: hidden;
 		}
