--- a/client/app/details/details.jade
+++ b/client/app/details/details.jade
@@ -1,14 +1,16 @@
-div( id='details' )
+div.container-fluid( id='details' )
 	h2 Person
-
-	table.details
-		tr( ng-repeat="key in person | keys" )
-			td( ng-bind='key' )
-			td( ng-bind-html='person[key]' )
-
-	div
-		a.btn.col-xs-6.col-sm-2.col-lg-2.pull-right(
-			ng-class="hired ? 'btn-danger' : 'btn-success'"
-			ng-click="hired = hire(id)"
-		) {{hired ? 'Dismiss' : 'Hire'}}
-		a.btn.btn-primary.col-xs-6.col-sm-2.col-lg-2.pull-right( href="/directory" ) Back
+	div.row
+		table.details
+			tr( ng-repeat="key in person | keys" )
+				td( ng-bind='key' )
+				td( ng-bind-html='person[key]' )
+	br
+	div.row
+		div.col-xs-6.col-sm-3.col-lg-3.col-sm-offset-6.col-lg-offset-6
+			a.btn.btn-primary.btn-block( href="/directory" ) Back
+		div.col-xs-6.col-sm-3.col-lg-3
+			a.btn.btn-block(
+				ng-class="hired ? 'btn-danger' : 'btn-success'"
+				ng-click="hired = hire(id)"
+			) {{hired ? 'Dismiss' : 'Hire'}}
