app ui-router refactoring

--- a/client/app/app.less
+++ b/client/app/app.less
@@ -3,7 +3,7 @@
 	font-family: 'Open Sans';
 	font-style: normal;
 	font-weight: 600;
-	src: local('Open Sans Semibold'), local('OpenSans-Semibold'), url(/fonts/OpenSansLatin600.woff2) format('woff2'), url(/fonts/OpenSansLatin600.woff) format('woff');
+	src: local('Open Sans Semibold'), local('OpenSans-Semibold'), url(/assets/fonts/OpenSansLatin600.woff2) format('woff2'), url(/fonts/OpenSansLatin600.woff) format('woff');
 }
 .bold{
 	font-size: 120%;
