--- a/client/app/home/home.jade
+++ b/client/app/home/home.jade
@@ -1,5 +1,5 @@
 div( id="home" )
-	img( src="img/roma.jpg" )
+	img( src="assets/img/roma.jpg" )
 	h4.text-center Web Developer | Krakow, Poland
 
 	div.row.text-center
