--- a/client/app/home/home.jade
+++ b/client/app/home/home.jade
@@ -3,7 +3,7 @@ div( id="home" )
 	h4.text-center Web Developer | Krakow, Poland
 
 	div.row.text-center
-		div.contact.col-xs-4.col-sm-3.col-md-2.col-lg-1( ng-repeat="contact in contacts" )
+		div.contact.col-xs-4.col-sm-2.col-md-1.col-md-push-1.col-lg-1.col-lg-push-1( ng-repeat="contact in contacts" )
 			a.fa.fa-5x(
 				ng-href="{{contact.url}}",
 				title="{{contact.title}}",
