--- a/client/index.jade
+++ b/client/index.jade
@@ -30,6 +30,14 @@ html( ng-app='romaleev' )
 		// endbuild
 
 	body
+		script.
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+			ga('create', 'UA-60757328-1', 'auto');
+			ga('send', 'pageview');
+
 		nav.navbar.navbar-default.navbar-fixed-top( id="navbar" ng-controller="NavbarCtrl" )
 			div.container-fluid
 				div.navbar-header
@@ -70,11 +78,11 @@ html( ng-app='romaleev' )
 
 		// build:js scripts/scripts.js
 		//- userJS:js
-		script(src="components/filters.js")
 		script(src="app/app.js")
-		script(src="components/services/home.service.js")
-		script(src="components/services/people.service.js")
+		script(src="components/filters.js")
 		script(src="app/home/home.controller.js")
 		script(src="app/people/people.controller.js")
+		script(src="components/services/home.service.js")
+		script(src="components/services/people.service.js")
 		//- endinject
 		// endbuild
