--- a/client/index.jade
+++ b/client/index.jade
@@ -8,7 +8,7 @@ html( ng-app='romaleev' )
 		meta( name="description" content="Roman Malieiev | Web Developer" )
 		meta( name="fragment" content="!" )
 
-		title( ng-bind="'Roman Malieiev - ' + $state.current.title" )
+		title( ng-bind="pageTitle" )
 		base( href="/" )
 		link( href="img/favicon.ico", rel="shortcut icon" )
 
@@ -29,7 +29,6 @@ html( ng-app='romaleev' )
 		//- endinject
 		// endbuild
 
-	body
 		script.
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -37,6 +36,7 @@ html( ng-app='romaleev' )
 			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 			ga('create', 'UA-60757328-1', 'auto');
 			ga('send', 'pageview');
+	body
 
 		nav.navbar.navbar-default.navbar-fixed-top( id="navbar" ng-controller="NavbarCtrl" )
 			div.container-fluid
