google author link, details back fix

--- a/client/index.jade
+++ b/client/index.jade
@@ -37,6 +37,9 @@ html( ng-app='romaleev' )
 			ga('create', 'UA-60757328-1', 'auto');
 			ga('send', 'pageview');
 	body
+		a( href="/" rel="author" )
+		a( href="https://plus.google.com/+Romaleevcom" rel="me" )
+		a( href="https://plus.google.com/+Romaleevcom" rel="publisher" )
 
 		nav.navbar.navbar-default.navbar-fixed-top( id="navbar" ng-controller="NavbarCtrl" )
 			div.container-fluid
