--- a/client/app/people/details.jade
+++ b/client/app/people/details.jade
@@ -8,7 +8,7 @@ div( id='details' )
 	br
 	div.row
 		div.col-xs-6.col-sm-3.col-lg-3.col-sm-offset-6.col-lg-offset-6
-			a.btn.btn-primary.btn-block( ui-sref="people.list" ) Back
+			a.btn.btn-primary.btn-block( ui-sref="{{prevState ? prevState : 'people.list'}}" ) Back
 		div.col-xs-6.col-sm-3.col-lg-3
 			a.btn.btn-block(
 				ng-init="hired = peopleService.isHired($stateParams.personId)"
